tests/ui/nll/user-annotations/adt-tuple-struct-calls.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/adt-tuple-struct-calls.rs:27:7
   |
LL |     let c = 66;
   |         - binding `c` declared here
LL |     let f = SomeStruct::<&'static u32>;
   |             -------------------------- assignment requires that `c` is borrowed for `'static`
LL |     f(&c);
   |       ^^ borrowed value does not live long enough
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-tuple-struct-calls.rs:33:7
   |
LL | fn annot_reference_named_lifetime<'a>(_d: &'a u32) {
   |                                   -- lifetime `'a` defined here
LL |     let c = 66;
   |         - binding `c` declared here
LL |     let f = SomeStruct::<&'a u32>;
   |             --------------------- assignment requires that `c` is borrowed for `'a`
LL |     f(&c);
   |       ^^ borrowed value does not live long enough
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-tuple-struct-calls.rs:45:11
   |
LL | fn annot_reference_named_lifetime_in_closure<'a>(_: &'a u32) {
   |                                              -- lifetime `'a` defined here
LL |     let _closure = || {
LL |         let c = 66;
   |             - binding `c` declared here
LL |         let f = SomeStruct::<&'a u32>;
   |                 --------------------- assignment requires that `c` is borrowed for `'a`
LL |         f(&c);
   |           ^^ borrowed value does not live long enough
LL |     };
   |     - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-tuple-struct-calls.rs:53:11
   |
LL |     let f = SomeStruct::<&'a u32>;
   |         - lifetime `'1` appears in the type of `f`
LL |     let _closure = || {
LL |         let c = 66;
   |             - binding `c` declared here
LL |         f(&c);
   |         --^^-
   |         | |
   |         | borrowed value does not live long enough
   |         argument requires that `c` is borrowed for `'1`
LL |     };
   |     - `c` dropped here while still borrowed

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0597`.
